[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/atlas_gui.png" type="Texture" id=1]
[ext_resource path="res://game/gui/touch_controls.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/font_main_small.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/theme/theme_lerimama.tres" type="Theme" id=4]

[sub_resource type="AtlasTexture" id=362]
atlas = ExtResource( 1 )
region = Rect2( 48, 144, 32, 32 )

[sub_resource type="AtlasTexture" id=358]
atlas = ExtResource( 1 )
region = Rect2( 48, 112, 32, 32 )

[sub_resource type="ConvexPolygonShape2D" id=361]
points = PoolVector2Array( -19, 0, -3, 16, 17, 16, 17, -16, -3, -16 )

[sub_resource type="AtlasTexture" id=372]
atlas = ExtResource( 1 )
region = Rect2( 34, 23, 6, 10 )

[sub_resource type="AtlasTexture" id=366]
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 80, 80 )

[sub_resource type="AtlasTexture" id=363]
atlas = ExtResource( 1 )
region = Rect2( 0, 176, 80, 80 )

[sub_resource type="RectangleShape2D" id=360]
extents = Vector2( 40, 40 )

[sub_resource type="ConvexPolygonShape2D" id=371]
points = PoolVector2Array( 0, 0, 1264, 0, 1264, 416, 1056, 416, 1056, 624, 0, 624 )

[sub_resource type="AtlasTexture" id=367]
atlas = ExtResource( 1 )
region = Rect2( 0, 120, 24, 24 )

[sub_resource type="AtlasTexture" id=368]
atlas = ExtResource( 1 )
region = Rect2( 24, 120, 24, 24 )

[sub_resource type="RectangleShape2D" id=370]
extents = Vector2( 28, 24 )

[sub_resource type="AtlasTexture" id=375]
atlas = ExtResource( 1 )
region = Rect2( 48, 72, 24, 24 )
margin = Rect2( -2, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=376]
atlas = ExtResource( 1 )
region = Rect2( 72, 72, 24, 24 )
margin = Rect2( -2, 0, 0, 0 )

[sub_resource type="RectangleShape2D" id=369]
extents = Vector2( 51, 26 )

[sub_resource type="RectangleShape2D" id=374]
extents = Vector2( 120, 32 )

[node name="TouchControls" type="Node2D"]
z_index = 100
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 480.0, 640.0 ],
"_edit_vertical_guides_": [ 120.0, 1248.0 ]
}

[node name="DirectionBtns" type="Node2D" parent="."]
position = Vector2( 40, 488 )
scale = Vector2( 2, 2 )

[node name="TouchBtn_L" type="TouchScreenButton" parent="DirectionBtns"]
position = Vector2( 32, 56 )
rotation = 3.14159
normal = SubResource( 362 )
pressed = SubResource( 358 )
shape = SubResource( 361 )
shape_visible = false
visibility_mode = 1

[node name="Arrow" type="Sprite" parent="DirectionBtns/TouchBtn_L"]
position = Vector2( 20.9999, 16.0001 )
texture = SubResource( 372 )

[node name="TouchBtn_U" type="TouchScreenButton" parent="DirectionBtns"]
position = Vector2( 24, 32 )
rotation = -1.5708
normal = SubResource( 362 )
pressed = SubResource( 358 )
shape = SubResource( 361 )
shape_visible = false
passby_press = true
visibility_mode = 1

[node name="Arrow" type="Sprite" parent="DirectionBtns/TouchBtn_U"]
position = Vector2( 20.9999, 16.0001 )
texture = SubResource( 372 )

[node name="TouchBtn_R" type="TouchScreenButton" parent="DirectionBtns"]
position = Vector2( 48, 24 )
normal = SubResource( 362 )
pressed = SubResource( 358 )
shape = SubResource( 361 )
shape_visible = false
passby_press = true
visibility_mode = 1

[node name="Arrow" type="Sprite" parent="DirectionBtns/TouchBtn_R"]
position = Vector2( 21, 16 )
texture = SubResource( 372 )

[node name="TouchBtn_D" type="TouchScreenButton" parent="DirectionBtns"]
position = Vector2( 56, 48 )
rotation = 1.5708
normal = SubResource( 362 )
pressed = SubResource( 358 )
shape = SubResource( 361 )
shape_visible = false
passby_press = true
visibility_mode = 1

[node name="Arrow" type="Sprite" parent="DirectionBtns/TouchBtn_D"]
position = Vector2( 21.0001, 15.4999 )
texture = SubResource( 372 )

[node name="BurstBtn" type="TouchScreenButton" parent="."]
position = Vector2( 1088, 488 )
scale = Vector2( 2, 2 )
normal = SubResource( 366 )
pressed = SubResource( 363 )
shape = SubResource( 360 )
shape_visible = false
visibility_mode = 1

[node name="Label" type="Label" parent="BurstBtn"]
margin_left = 14.5
margin_top = 28.5
margin_right = 69.5
margin_bottom = 55.5
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Burst"
align = 1
valign = 1

[node name="Shdw" type="Label" parent="BurstBtn/Label"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
margin_left = 0.5
margin_top = 0.5
margin_right = 55.5
margin_bottom = 27.5
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Burst"
align = 1
valign = 1

[node name="ScreenBtn" type="TouchScreenButton" parent="."]
position = Vector2( 8, 48 )
shape = SubResource( 371 )
shape_centered = false
visibility_mode = 1

[node name="PolyShapeL" type="Polygon2D" parent="ScreenBtn"]
visible = false
color = Color( 1, 0, 0, 0.211765 )
polygon = PoolVector2Array( 0, 0, 1264, 0, 1264, 416, 1056, 416, 1056, 624, 0, 624 )

[node name="PolyShapeR" type="Polygon2D" parent="ScreenBtn"]
visible = false
color = Color( 1, 0, 0, 0.211765 )
polygon = PoolVector2Array( 0, 0, 1264, 0, 1264, 624, 216, 624, 216, 416, 0, 416 )

[node name="Label" type="Label" parent="ScreenBtn"]
margin_left = 30.5
margin_top = 549.0
margin_right = 281.5
margin_bottom = 576.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Touch and slide for motion"
valign = 1

[node name="Shadow" type="Label" parent="ScreenBtn/Label"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
margin_left = 1.0
margin_top = 1.0
margin_right = 252.0
margin_bottom = 28.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Touch and slide for motion"
valign = 1

[node name="PauseBtn" type="TouchScreenButton" parent="."]
position = Vector2( 549, 7 )
normal = SubResource( 367 )
pressed = SubResource( 368 )
shape = SubResource( 370 )
visibility_mode = 1

[node name="MuteBtn" type="TouchScreenButton" parent="."]
position = Vector2( 687, 7 )
normal = SubResource( 375 )
pressed = SubResource( 376 )
shape = SubResource( 370 )
visibility_mode = 1

[node name="NextTrackBtn" type="TouchScreenButton" parent="."]
position = Vector2( 754, -9 )
shape = SubResource( 369 )
visibility_mode = 1

[node name="HintBtn" type="TouchScreenButton" parent="."]
position = Vector2( 639, 608 )
shape = SubResource( 374 )
shape_centered = false
visibility_mode = 1

[node name="__merca" type="ColorRect" parent="HintBtn"]
visible = false
margin_left = -119.0
margin_top = -32.0
margin_right = 121.0
margin_bottom = 32.0
color = Color( 1, 1, 1, 0.145098 )

[node name="PositionL" type="Position2D" parent="."]
position = Vector2( 40, 488 )
__meta__ = {
"_gizmo_extents_": 100.0
}

[node name="PositionR" type="Position2D" parent="."]
position = Vector2( 1088, 488 )
__meta__ = {
"_gizmo_extents_": 100.0
}

[connection signal="pressed" from="HintBtn" to="." method="_on_HintBtn_pressed"]
